--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 
   </head>
-
   <body>
 
     <head>
@@ -31,7 +30,7 @@
   <div class = " page-header">
     <h1> Dr. A's SEP Class </h1></div>
   <div class = "container">
-    <div class = "col-xs-3">HOME</div>
+    <div class = "col-xs-3"><b>HOME</b></div>
     <div class = "col-xs-3">ABOUT</div>
     <div class = "col-xs-3">CLASS PERIODS</div>
     <div class = "col-xs-3"><a href="mailto:jantinora@richmondhillhs.org?Subject=Class%20Question" target="_top">CONTACT</a></div>
@@ -39,8 +38,8 @@
     <div class = "col-xs-6"><p style="float: left;"><img src="http://cdni.wired.co.uk/620x413/g_j/Hire%20engineers.jpeg" height="200px" width="200px" border="1px"></p></div>
   <div class = "col-xs-6"><b>Description of class GOES HERE</b>
 </div>
-  
-<link rel="shortcut icon" href=".ico">
+
+
 
 </body>
 
